--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ h3,
   position: relative;
   inset: 0;
   z-index: -1;
-  background-image: url("/images/cover.jpg");
+  background-image: url("../images/cover.jpg");
   background-position: center;
   background-size: cover;
 }
