--- a/styles/style.css
+++ b/styles/style.css
@@ -278,7 +278,7 @@ h3,
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 0 50px 0;
+  padding: 0 50px 82px;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
